@@ -1,5 +1,7 @@
 2003-02-02  Ulrich Drepper  <drepper@redhat.com>
 
+	* allocatestack.c: Improve comment throughout the file.
+
 	* sysdeps/unix/sysv/linux/i386/i486/lowlevellock.S
 	(__lll_lock_wait): Add branch predicition.
 	* sysdeps/unix/sysv/linux/i386/i486/libc-lowlevellock.S
